@@ -84,12 +84,12 @@ typedef struct {
 // A LineDef, as used for editing, and as input to the BSP builder.
 
 typedef struct {
-  short v1;
-  short v2;
-  short flags;
+  unsigned short v1;
+  unsigned short v2;
+  unsigned short flags;
   short special;
   short tag;
-  short sidenum[2];  // sidenum[1] will be -1 if one sided
+  unsigned short sidenum[2];  // sidenum[1] will be -1 if one sided
 } PACKEDATTR maplinedef_t;
 
 //
@@ -156,10 +156,10 @@ typedef struct {
 // LineSeg, generated by splitting LineDefs
 // using partition lines selected by BSP builder.
 typedef struct {
-  short v1;
-  short v2;
+  unsigned short v1;
+  unsigned short v2;
   short angle;
-  short linedef;
+  unsigned short linedef;
   short side;
   short offset;
 } PACKEDATTR mapseg_t;
